--- a/app/src/main/res/layout/activity_spin.xml
+++ b/app/src/main/res/layout/activity_spin.xml
@@ -160,6 +160,8 @@
                     android:id="@+id/ad_root"
                     android:layout_width="336dp"
                     android:layout_height="152dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="28dp">
 
